2023-07-05T01:55:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5459724624 # 994
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 6 9
* notice: prev accum: outdated-unq outdated-all / unq all: 135 192 / 140 200
* notice: next accum: outdated-unq outdated-all / unq all: 135 192 / 141 201
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-04]

2022-12-13T00:56:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3681202082 # 699
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 112 157 / 113 159
* notice: next accum: outdated-unq outdated-all / unq all: 112 157 / 114 161
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-12-12]

2022-12-07T16:20:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640758581 # 684
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 111 156 / 112 157
* notice: next accum: outdated-unq outdated-all / unq all: 112 157 / 113 159
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-25] / [2022-12-07]

2022-10-26T08:23:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327364147 # 557
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 109 153 / 112 157
* notice: next accum: outdated-unq outdated-all / unq all: 111 156 / 112 157
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0