@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-05T01:55:44Z",
-  "count_outdated" : 192,
-  "uniques_outdated" : 135,
+  "timestamp" : "2023-07-06T08:26:19Z",
+  "count_outdated" : 194,
+  "uniques_outdated" : 136,
   "count" : 201,
   "uniques" : 141,
   "clones" : [
-    {
-      "timestamp": "2023-06-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-30T00:00:00Z",
       "count": 1,
