@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 6,
+  "count": 7,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2023-06-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-30T00:00:00Z",
       "count": 1,
