@@ -1,3 +1,12 @@
+2023-07-06T08:26:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5473241454 # 998
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 135 192 / 141 201
+* notice: next accum: outdated-unq outdated-all / unq all: 136 194 / 141 201
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-06-22] / []
+
 2023-07-05T01:55:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5459724624 # 994
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
